<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, AppLockerActivity!</string>
    <string name="app_name">AppLocker</string>
    <string name="set_success_msg">设置成功!</string>
    <string name="btn_text_done">Done</string>
    <string name="digit0">0</string>
    <string name="digit1">1</string>
    <string name="digit2">2</string>
    <string name="digit3">3</string>
    <string name="digit4">4</string>
    <string name="digit5">5</string>
    <string name="digit6">6</string>
    <string name="digit7">7</string>
    <string name="digit8">8</string>
    <string name="digit9">9</string>
    <string name="del">删除​​​​</string>
    <string name="clear">清除​​​</string>
    <string name="submit">确定</string>
    <string name="passwd_wrong">密码错误</string>

</resources>