<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/com.cc.applock"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg" >

    <TextView
        android:id="@+id/lcd"
        android:layout_width="fill_parent"
        android:layout_height="70.0dip"
        android:background="@drawable/lcd"
        android:gravity="center"
        android:lines="1"
        android:maxLength="8"
        android:maxLines="1"
        android:singleLine="true"
        android:text="输入密码​​​​​​​​​​"
        android:textColor="#ffffffff"
        android:textSize="37.0dip" />

    <LinearLayout
        android:id="@+id/pad"
        android:layout_width="fill_parent"
        android:layout_height="320.0dip"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:visibility="invisible" >

        <LinearLayout
            android:id="@+id/simplePad"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0.0px"
                android:layout_weight="1.0" >

                <Button
                    android:id="@+id/digit1"
                    style="@style/button_style"
                    android:background="@drawable/small_button_stateful"
                    android:text="@string/digit1" />

                <Button
                    android:id="@+id/digit2"
                    style="@style/button_style"
                    android:background="@drawable/small_button_stateful"
                    android:text="@string/digit2" />

                <Button
                    android:id="@+id/digit3"
                    style="@style/button_style"
                    android:background="@drawable/small_button_stateful"
                    android:text="@string/digit3" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0.0px"
                android:layout_weight="1.0" >

                <Button
                    android:id="@+id/digit4"
                    style="@style/button_style"
                    android:background="@drawable/small_button_stateful"
                    android:text="@string/digit4" />

                <Button
                    android:id="@+id/digit5"
                    style="@style/button_style"
                    android:background="@drawable/small_button_stateful"
                    android:text="@string/digit5" />

                <Button
                    android:id="@+id/digit6"
                    style="@style/button_style"
                    android:background="@drawable/small_button_stateful"
                    android:text="@string/digit6" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0.0px"
                android:layout_weight="1.0" >

                <Button
                    android:id="@+id/digit7"
                    style="@style/button_style"
                    android:background="@drawable/small_button_stateful"
                    android:text="@string/digit7" />

                <Button
                    android:id="@+id/digit8"
                    style="@style/button_style"
                    android:background="@drawable/small_button_stateful"
                    android:text="@string/digit8" />

                <Button
                    android:id="@+id/digit9"
                    style="@style/button_style"
                    android:background="@drawable/small_button_stateful"
                    android:text="@string/digit9" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0.0px"
                android:layout_weight="1.0" >

                <Button
                    android:id="@+id/clear"
                    style="@style/button_style"
                    android:background="@drawable/small_button_stateful"
                    android:text="@string/clear"
                    android:textColor="#ffffffff"
                    android:textSize="30.0dip" />

                <Button
                    android:id="@+id/digit0"
                    style="@style/button_style"
                    android:background="@drawable/small_button_stateful"
                    android:text="@string/digit0" />

                <Button
                    android:id="@+id/submit"
                    style="@style/button_style"
                    android:background="@drawable/small_button_stateful"
                    android:text="@string/submit"
                    android:textColor="#ffffffff"
                    android:textSize="30.0dip" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/passpad"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/pad"
        android:layout_marginBottom="7.0dip"
        android:visibility="invisible" >

        <TextView
            android:id="@+id/userpass"
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:layout_margin="7.0dip"
            android:background="@android:drawable/editbox_background"
            android:gravity="center"
            android:hint=""
            android:inputType="phone"
            android:lines="1"
            android:maxLines="1"
            android:numeric="integer"
            android:password="false"
            android:singleLine="true"
            android:textColor="#ff000000"
            android:textSize="40.0dip" />
    </RelativeLayout>

</RelativeLayout>